# Emby-Searcher

./: README.md
backend/: pyproject.toml
backend/src/emby_searcher/: config.py  elastic.py  emby_client.py  main.py  sync.py
