[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "emby-searcher"
version = "0.1.0"
description = "Emby Searcher project for quickly searching an emby index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "elasticsearch[async]>=8.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
emby-sync = "emby_searcher.sync:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]
